--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "auth0": "^2.32.0",
     "axios": "^0.21.1",
     "concurrently": "^5.3.0",
     "react": "^17.0.1",
