--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eject": "react-scripts eject",
     "server": "nodemon server --prefix backend",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm start\""
+    "dev": "concurrently \"npm run server\" \"npm start\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build"
   },
   "eslintConfig": {
     "extends": [
