--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 **/node_modules
-**/config
 /.pnp
 .pnp.js
 
@@ -23,3 +22,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/config/secret.env
