--- a/package.json
+++ b/package.json
@@ -1,37 +1,50 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "client": "cd client && npm start",
-    "server": "nodemon server",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kito0/zapr.git"
-  },
-  "author": "Ver:a",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kito0/zapr/issues"
-  },
-  "homepage": "https://github.com/kito0/zapr#readme",
+  "name": "zapr",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.13",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "@auth0/auth0-react": "^1.2.0",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "auth0": "^2.32.0",
+    "axios": "^0.21.1",
+    "concurrently": "^5.3.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "concurrently": "^5.3.0"
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   },
-  "description": ""
+  "proxy": "http://localhost:3000"
 }
